--- a/app.conf
+++ b/app.conf
@@ -1,4 +1,4 @@
 # PROJECT SECRET_KEY####
 SECRET_KEY = 'django-insecure-c$v#nos96$tmd(nap&^u0(90!%c@#57^xa#0%-y6mii_aoly-p'
 
-ALLOWED_HOSTS = '*'
+ALLOWED_HOSTS = '89.108.71.21'
